--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
       </div>
     </div>
 
+    <div class="p-4">
+      <a href="semisim-landing-page.html" class="block w-full bg-[#e24329] text-white text-center py-3 rounded-lg hover:bg-[#d03b22] transition-colors">
+        SemiSim 랜딩 페이지로 가기
+      </a>
+    </div>
+
     <div class="text-center text-xs text-gray-500 py-4">
       © 2023 YEOUL SOLUTION · <a href="#" class="text-[#e24329]"></a>
     </div>
