--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
 
     <div class="p-4">
-      <a href="semisim-landing-page.html" class="block w-full bg-[#e24329] text-white text-center py-3 rounded-lg hover:bg-[#d03b22] transition-colors">
+      <a href="SemiSim Landing/semisim-landing-page.html" class="block w-full bg-[#e24329] text-white text-center py-3 rounded-lg hover:bg-[#d03b22] transition-colors">
         SemiSim 랜딩 페이지로 가기
       </a>
     </div>
