HB-SECS Pro Lading Page 추가 함.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
         SemiSim 랜딩 페이지로 가기
       </a>
     </div>
+    <div class="p-4">
+      <a href="HB-SECS Pro Landing/HB-SECS Pro Landing.html" class="block w-full bg-[#e24329] text-white text-center py-3 rounded-lg hover:bg-[#d03b22] transition-colors">
+        SemiSim 랜딩 페이지로 가기
+      </a>
+    </div>
 
     <div class="text-center text-xs text-gray-500 py-4">
       © 2023 YEOUL SOLUTION · <a href="#" class="text-[#e24329]"></a>
