--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
     <div class="p-4">
       <a href="HB-SECS Pro Landing/HB-SECS Pro Landing.html" class="block w-full bg-[#e24329] text-white text-center py-3 rounded-lg hover:bg-[#d03b22] transition-colors">
-        SemiSim 랜딩 페이지로 가기
+        HB-SECS 랜딩 페이지로 가기
       </a>
     </div>
 
