--- a/SemiSim Landing/semisim-landing-page.html
+++ b/SemiSim Landing/semisim-landing-page.html
@@ -665,7 +665,7 @@
                 <a href="#">연락처</a>
                 <a href="#">개인정보처리방침</a>
             </div>
-            <p>&copy; 2025 SemiSim. All Rights Reserved.</p>
+            <p>&copy; 2025 HEADBYTE. All Rights Reserved.</p>
         </div>
     </footer>
 
