--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
 <body class="bg-gray-100">
   <div class="max-w-sm mx-auto bg-white rounded-2xl shadow-md overflow-hidden mt-10 border border-gray-200">
     <div class="bg-[#e24329] text-white text-center p-6">
-      <h1 class="text-xl font-bold">YEOUL SOLUTION</h1>
+      <img src="images/HEADBYTE_logo_web.png" alt="HEADBYTE" class="mx-auto mb-2 h-12">
+      <h1 class="text-xl font-bold">HEADBYTE</h1>
       <p class="text-sm mt-2">자동화 장비 소프트웨어 개발 전문</p>
     </div>
 
     <div class="p-6 space-y-2">
       <h2 class="text-lg font-semibold">나명진 / Joseph Na</h2>
       <p class="text-sm text-gray-600">실장 / Department Manager</p>
-      <p class="text-sm">회사명: 여울솔루션</p>
+      <p class="text-sm">회사명: 헤드바이트</p>
       <p class="text-sm">전화: <a href="tel:+821046517483" class="text-[#e24329]">+82.10.4651.7483</a></p>
       <p class="text-sm">사무실: <a href="tel:+823180582120" class="text-[#e24329]">+82.31.8058.2120</a></p>
       <p class="text-sm">팩스: 0504.237.7483</p>
@@ -52,7 +53,7 @@
     </div>
 
     <div class="text-center text-xs text-gray-500 py-4">
-      © 2023 YEOUL SOLUTION · <a href="#" class="text-[#e24329]"></a>
+      © 2023 HEADBYTE · <a href="#" class="text-[#e24329]"></a>
     </div>
   </div>
 </body>
