--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-gray-100">
   <div class="max-w-sm mx-auto bg-white rounded-2xl shadow-md overflow-hidden mt-10 border border-gray-200">
-    <div class="bg-[#e24329] text-white text-center p-6">
+    <div class="text-center p-6" style="background-color: #2b2f72; color: white;">
       <img src="images/HEADBYTE_logo_web.png" alt="HEADBYTE" class="mx-auto mb-2 h-12">
       <h1 class="text-xl font-bold">HEADBYTE</h1>
       <p class="text-sm mt-2">자동화 장비 소프트웨어 개발 전문</p>
@@ -18,42 +18,42 @@
       <h2 class="text-lg font-semibold">나명진 / Joseph Na</h2>
       <p class="text-sm text-gray-600">실장 / Department Manager</p>
       <p class="text-sm">회사명: 헤드바이트</p>
-      <p class="text-sm">전화: <a href="tel:+821046517483" class="text-[#e24329]">+82.10.4651.7483</a></p>
-      <p class="text-sm">사무실: <a href="tel:+823180582120" class="text-[#e24329]">+82.31.8058.2120</a></p>
+      <p class="text-sm">전화: <a href="tel:+821046517483" style="color: #2b2f72; font-weight: bold;">+82.10.4651.7483</a></p>
+      <p class="text-sm">사무실: <a href="tel:+823180582120" style="color: #2b2f72; font-weight: bold;">+82.31.8058.2120</a></p>
       <p class="text-sm">팩스: 0504.237.7483</p>
-      <p class="text-sm">이메일: <a href="mailto:myoungjin.na@hotmail.com" class="text-[#e24329]">myoungjin.na@hotmail.com</a></p>
+      <p class="text-sm">이메일: <a href="mailto:myoungjin.na@hotmail.com" style="color: #2b2f72; font-weight: bold;">myoungjin.na@hotmail.com</a></p>
       <p class="text-sm">주소: 경기도 화성시 동탄광역환승로 62</p>
       <p class="text-sm">동탄역 삼정그린코아 201동(오피스동) 910호</p>
     </div>
 
     <div class="bg-gray-100 p-4 space-y-4">
-      <div class="bg-white p-3 rounded-lg border-l-4 border-[#e24329]">
-        <h3 class="text-[#e24329] font-semibold">소프트웨어 개발</h3>
+      <div class="bg-white p-3 rounded-lg border-l-4" style="border-color: #2b2f72;">
+        <h3 class="font-semibold" style="color: #2b2f72;">소프트웨어 개발</h3>
         <p class="text-sm">SECS/GEM | CIM | 장비제어 소프트웨어</p>
       </div>
-      <div class="bg-white p-3 rounded-lg border-l-4 border-[#e24329]">
-        <h3 class="text-[#e24329] font-semibold">기술 컨설팅</h3>
+      <div class="bg-white p-3 rounded-lg border-l-4" style="border-color: #2b2f72;">
+        <h3 class="font-semibold" style="color: #2b2f72;">기술 컨설팅</h3>
         <p class="text-sm">공정 자동화 및 장비 운용 기술 컨설팅</p>
       </div>
-      <div class="bg-white p-3 rounded-lg border-l-4 border-[#e24329]">
-        <h3 class="text-[#e24329] font-semibold">프로그램 버그 해결</h3>
+      <div class="bg-white p-3 rounded-lg border-l-4" style="border-color: #2b2f72;">
+        <h3 class="font-semibold" style="color: #2b2f72;">프로그램 버그 해결</h3>
         <p class="text-sm">장비 소프트웨어 디버깅 및 오류 지원</p>
       </div>
     </div>
 
     <div class="p-4">
-      <a href="SemiSim Landing/semisim-landing-page.html" class="block w-full bg-[#e24329] text-white text-center py-3 rounded-lg hover:bg-[#d03b22] transition-colors">
+      <a href="SemiSim Landing/semisim-landing-page.html" class="block w-full text-white text-center py-3 rounded-lg transition-colors" style="background-color: #2b2f72;" onmouseover="this.style.backgroundColor='#1e2351'" onmouseout="this.style.backgroundColor='#2b2f72'">
         SemiSim 랜딩 페이지로 가기
       </a>
     </div>
     <div class="p-4">
-      <a href="HB-SECS Pro Landing/HB-SECS Pro Landing.html" class="block w-full bg-[#e24329] text-white text-center py-3 rounded-lg hover:bg-[#d03b22] transition-colors">
+      <a href="HB-SECS Pro Landing/HB-SECS Pro Landing.html" class="block w-full text-white text-center py-3 rounded-lg transition-colors" style="background-color: #2b2f72;" onmouseover="this.style.backgroundColor='#1e2351'" onmouseout="this.style.backgroundColor='#2b2f72'">
         HB-SECS 랜딩 페이지로 가기
       </a>
     </div>
 
     <div class="text-center text-xs text-gray-500 py-4">
-      © 2023 HEADBYTE · <a href="#" class="text-[#e24329]"></a>
+      © 2023 HEADBYTE · <a href="#" style="color: #2b2f72;"></a>
     </div>
   </div>
 </body>
